# riden-modbus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  firmware.yml  publish.yml  release-drafter.yml
esphome/: rd60xx-serial-proxy.yaml
esphome/static/: index.html
script/: esphome_query.py  query.py
src/riden_modbus/: __init__.py  battery.py  clock.py  device_info.py  enums.py  exceptions.py  metadata.py  model.py  models.py  options.py  output.py  preset.py  ranges.py  rd60xx.py  settings.py
tests/: conftest.py  test_canonical_parity.py  test_device.py  test_esphome_query.py  test_model.py  test_models.py  test_query_cli.py
tests/reference/: canonical_points.json
